fixed spacing of images

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -51,32 +51,32 @@
 .last-section img {
     width: 320px;
     height: 180px;
-    margin-left: -455px;
+    margin-left: -50px;
     margin-top: 110px;
 }
 
 .about-image-3 {
     width: 20px;
     height: 180px;
-    margin-left:150px;
+    margin-left:100px;
     margin-top: 100px;
 
 }
 
 .about-content-4 img {
-    width: 420px;
+    width: 375px;
     height: 180px;
     margin-top:110px;
-    margin-left: 90px;
+    margin-left: 70px;
 }
 
 
 
 .about-gallery {
     display: flex;
-    margin: 20px;
+    margin: 15px;
     align-items: left;
-    margin: 20px;
+    margin: 15px;
     align-items: left;
     justify-content: left;
   
